K8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tnet-api-service
spec:
  selector:
    component: tnet-api
  ports:
    - port: 8000
      targetPort: 8000
